--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Collector</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
     <div id="wrapper">
 
-        <header id="maintitle">
+        <header id="mainTitle">
             <h1>Crystal Collector</h1>
         </header>
 
         <div id="instructions">
             <p>You will be given a random number at the start of the game.</p>
-            <br>
             <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total
                 score.
             </p>
-            <br>
             <p>You win the game by matching your total score to the random number given. You lose the game if your total score
                 goes above the random number.</p>
-            <br>
             <p>The value of each crystal is hidden from you until you click on it.</p>
-            <br>
             <p>The value of each crystal will change every time the game starts.</p>
+
         </div>
 
         <div id="randomNumber">
@@ -36,21 +36,52 @@
         <div id="wins/losses">
         </div>
 
-        <div class="crystal">
-        </div>
-        <div class="crystal">
-        </div>
-        <div class="crystal">
-        </div>
-        <div class="crystal">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="crystal">
+                        <img src="assets/images/gem1.jpg">
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="crystal">
+                        <img src="assets/images/gem2.jpg">
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="crystal">
+                        <img src="assets/images/gem3.jpg">
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="crystal">
+                        <img src="assets/images/gem4.jpg">
+                    </div>
+                </div>
+                <div class="col-sm">
+                </div>
+
+                <div class="col-sm">
+                </div>
+
+                <div class="col-sm">
+                </div>
+
+                <div class="col-sm">
+                </div>
+            </div>
         </div>
 
-        <div id="totalScoreis" <p>Your total score is:</p>
+
+        <div id="totalScoreIs" <p>Your total score is:</p>
         </div>
 
-        <div id="totalScore" 
-        </div>
-        <!-- wrapper div -->
+        <div id="totalScore" </div>
+            <!-- wrapper div -->
         </div>
         <!-- wrapper div -->
 
